--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1"
+  },
+  "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.1.0",
-    "moment": "^2.20.1"
+    "moment": "^2.20.1",
+    "chai-asserttype": "^1.0.5"
   }
 }
